# s3-monitoring

./: .dockerignore  .env  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  __version__.py  docker-compose.yml  main.py  pyproject.toml
email_templates/: s3_status_email.html  s3_warning_email.html
